test_results/channels.txt
test
+- run test 901 pass, 6 fail (907 total)
[qq] (warn): sendChunk: unsupported target type 'foo'
[qq] (warn): sendChunk: empty target id for type 'dm'
[qq] (warn): sendChunk: invalid c2c user_openid: error.InvalidTarget
error: 'channels.discord.test.discord handleMessageCreate publishes inbound guild message with metadata' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:1104:29: 0x101324723 in peekNextTokenType (test)
                           else => return error.SyntaxError,
                                   ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:134:23: 0x10131f3e7 in nextAllocMax (test)
               else => |err| return err,
                             ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/dynamic.zig:88:21: 0x101316ab3 in jsonParse__anon_54440 (test)
                   switch (try source.nextAllocMax(allocator, .alloc_always, options.max_value_len.?)) {
                           ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:273:17: 0x1013008bb in innerParse__anon_53424 (test)
                       return T.jsonParse(allocator, source, options);
                       ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:149:19: 0x1012e619b in parseFromTokenSourceLeaky__anon_52635 (test)
           const value = try innerParse(T, allocator, scanner_or_reader, resolved_options);
                         ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:116:20: 0x1012cce2f in parseFromTokenSource__anon_51710 (test)
           parsed.value = try parseFromTokenSourceLeaky(T, parsed.arena.allocator(), scanner_or_reader, options);
                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:82:5: 0x1012c7e97 in parseFromSlice__anon_49627 (test)
           return parseFromTokenSource(T, allocator, &scanner, options);
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/channels/discord.zig:1192:18: 0x1017e7d23 in test.discord handleMessageCreate publishes inbound guild message with metadata (test)
           const meta = try std.json.parseFromSlice(std.json.Value, alloc, msg.metadata_json.?, .{});
                        ^
error: 'channels.discord.test.discord handleMessageCreate sets is_dm metadata for direct messages' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:1104:29: 0x101324723 in peekNextTokenType (test)
                           else => return error.SyntaxError,
                                   ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:134:23: 0x10131f3e7 in nextAllocMax (test)
               else => |err| return err,
                             ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/dynamic.zig:88:21: 0x101316ab3 in jsonParse__anon_54440 (test)
                   switch (try source.nextAllocMax(allocator, .alloc_always, options.max_value_len.?)) {
                           ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:273:17: 0x1013008bb in innerParse__anon_53424 (test)
                       return T.jsonParse(allocator, source, options);
                       ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:149:19: 0x1012e619b in parseFromTokenSourceLeaky__anon_52635 (test)
           const value = try innerParse(T, allocator, scanner_or_reader, resolved_options);
                         ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:116:20: 0x1012cce2f in parseFromTokenSource__anon_51710 (test)
           parsed.value = try parseFromTokenSourceLeaky(T, parsed.arena.allocator(), scanner_or_reader, options);
                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:82:5: 0x1012c7e97 in parseFromSlice__anon_49627 (test)
           return parseFromTokenSource(T, allocator, &scanner, options);
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/channels/discord.zig:1227:18: 0x1017e970b in test.discord handleMessageCreate sets is_dm metadata for direct messages (test)
           const meta = try std.json.parseFromSlice(std.json.Value, alloc, msg.metadata_json.?, .{});
                        ^
error: 'channels.slack.test.slack processHistoryMessage publishes inbound message to bus' failed:
       [slack] (warn): Slack chat.postMessage API error (C123): missing_scope (needed=chat:write, provided=commands)
       [slack] (warn): Slack chat.postMessage API error (C123): channel_not_found
       [slack] (warn): Slack token mismatch: bot_token api_app_id=A111 but app_token api_app_id=B222
       [slack] (warn): Slack socket event dropped: api_app_id=A222 expected=A111
       [slack] (warn): Slack socket event dropped: team_id=T222 expected=T111
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:1104:29: 0x101324723 in peekNextTokenType (test)
                           else => return error.SyntaxError,
                                   ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:134:23: 0x10131f3e7 in nextAllocMax (test)
               else => |err| return err,
                             ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/dynamic.zig:88:21: 0x101316ab3 in jsonParse__anon_54440 (test)
                   switch (try source.nextAllocMax(allocator, .alloc_always, options.max_value_len.?)) {
                           ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:273:17: 0x1013008bb in innerParse__anon_53424 (test)
                       return T.jsonParse(allocator, source, options);
                       ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:149:19: 0x1012e619b in parseFromTokenSourceLeaky__anon_52635 (test)
           const value = try innerParse(T, allocator, scanner_or_reader, resolved_options);
                         ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:116:20: 0x1012cce2f in parseFromTokenSource__anon_51710 (test)
           parsed.value = try parseFromTokenSourceLeaky(T, parsed.arena.allocator(), scanner_or_reader, options);
                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:82:5: 0x1012c7e97 in parseFromSlice__anon_49627 (test)
           return parseFromTokenSource(T, allocator, &scanner, options);
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/channels/slack.zig:1613:18: 0x1017f4c9b in test.slack processHistoryMessage publishes inbound message to bus (test)
           const meta = try std.json.parseFromSlice(std.json.Value, alloc, msg.metadata_json.?, .{});
                        ^
error: 'channels.imessage.test.imessage publishInboundMessage emits group session key and metadata' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:1104:29: 0x101324723 in peekNextTokenType (test)
                           else => return error.SyntaxError,
                                   ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:134:23: 0x10131f3e7 in nextAllocMax (test)
               else => |err| return err,
                             ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/dynamic.zig:88:21: 0x101316ab3 in jsonParse__anon_54440 (test)
                   switch (try source.nextAllocMax(allocator, .alloc_always, options.max_value_len.?)) {
                           ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:273:17: 0x1013008bb in innerParse__anon_53424 (test)
                       return T.jsonParse(allocator, source, options);
                       ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:149:19: 0x1012e619b in parseFromTokenSourceLeaky__anon_52635 (test)
           const value = try innerParse(T, allocator, scanner_or_reader, resolved_options);
                         ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:116:20: 0x1012cce2f in parseFromTokenSource__anon_51710 (test)
           parsed.value = try parseFromTokenSourceLeaky(T, parsed.arena.allocator(), scanner_or_reader, options);
                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:82:5: 0x1012c7e97 in parseFromSlice__anon_49627 (test)
           return parseFromTokenSource(T, allocator, &scanner, options);
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/channels/imessage.zig:873:18: 0x101806aa3 in test.imessage publishInboundMessage emits group session key and metadata (test)
           const meta = try std.json.parseFromSlice(std.json.Value, allocator, inbound.metadata_json.?, .{});
                        ^
error: 'channels.imessage.test.imessage publishInboundMessage emits direct session key and dm metadata' failed:
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:1104:29: 0x101324723 in peekNextTokenType (test)
                           else => return error.SyntaxError,
                                   ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/Scanner.zig:134:23: 0x10131f3e7 in nextAllocMax (test)
               else => |err| return err,
                             ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/dynamic.zig:88:21: 0x101316ab3 in jsonParse__anon_54440 (test)
                   switch (try source.nextAllocMax(allocator, .alloc_always, options.max_value_len.?)) {
                           ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:273:17: 0x1013008bb in innerParse__anon_53424 (test)
                       return T.jsonParse(allocator, source, options);
                       ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:149:19: 0x1012e619b in parseFromTokenSourceLeaky__anon_52635 (test)
           const value = try innerParse(T, allocator, scanner_or_reader, resolved_options);
                         ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:116:20: 0x1012cce2f in parseFromTokenSource__anon_51710 (test)
           parsed.value = try parseFromTokenSourceLeaky(T, parsed.arena.allocator(), scanner_or_reader, options);
                          ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/json/static.zig:82:5: 0x1012c7e97 in parseFromSlice__anon_49627 (test)
           return parseFromTokenSource(T, allocator, &scanner, options);
           ^
       /Users/asil/.openclaw/workspace/nullclaw/src/channels/imessage.zig:912:18: 0x1018096b3 in test.imessage publishInboundMessage emits direct session key and dm metadata (test)
           const meta = try std.json.parseFromSlice(std.json.Value, allocator, inbound.metadata_json.?, .{});
                        ^
error: 'channels.signal.test.process envelope attachment only not skipped when ignore disabled' logged 1 errors:
       [http_util] (err): curlPostWithProxy: request failed: error.ConnectionRefused
       [signal] (warn): Signal fetch attachment dummy_id failed: error.ConnectionRefused
error: 'channels.email.test.consent granted allows send attempt' failed:
       expected error.SmtpConnectError, found error.ParseFailed
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/Io/net.zig:703:21: 0x1014a92e7 in resolve (test)
                   else => return error.ParseFailed,
                           ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/Io/net.zig:144:26: 0x1013886a7 in resolveIp6 (test)
               return .{ .ip6 = try Ip6Address.resolve(io, text, port) };
                                ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/Io/net.zig:140:9: 0x1013883f3 in resolve (test)
               return resolveIp6(io, text, port);
               ^
       /Users/asil/.openclaw/workspace/nullclaw/src/channels/email.zig:100:22: 0x1014816d3 in sendMessage (test)
               const addr = try std.Io.net.IpAddress.resolve(io, self.config.smtp_host, self.config.smtp_port);
                            ^
       /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:72:13: 0x101876787 in expectError__anon_497485 (test)
                   return error.TestUnexpectedError;
                   ^
       /Users/asil/.openclaw/workspace/nullclaw/src/channels/email.zig:635:5: 0x1018772bb in test.consent granted allows send attempt (test)
           try std.testing.expectError(error.SmtpConnectError, result);
           ^
failed command: ./.zig-cache/o/d29e5cc69a73884310964ec5bdee7793/test --cache-dir=./.zig-cache --seed=0x672c6040 --listen=-

Build Summary: 6/8 steps succeeded (1 failed); 901/907 tests passed (6 failed)
test transitive failure
+- run test 901 pass, 6 fail (907 total)
|  +- compile test Debug native success 22s MaxRSS:728M
|     +- WriteFile sqlite3.h cached
|     +- compile lib sqlite3 Debug native cached 85ms MaxRSS:30M
|     +- compile lib sqlite3 Debug native (reused)
|     +- options cached
+- run test success 734ms MaxRSS:2M
   +- compile test Debug native success 6s MaxRSS:221M
      +- WriteFile sqlite3.h (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- WriteFile sqlite3.h (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- options (reused)

error: the following build command failed with exit code 1:
.zig-cache/o/0105c9ee9be62dc964bdfac84a8967a7/build /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/zig /Users/asil/.local/share/zigup/0.16.0-dev.2694+74f361a5c/files/lib /Users/asil/.openclaw/workspace/nullclaw .zig-cache /Users/asil/.cache/zig --seed 0x672c6040 -Zfa5d9d47b852bb23 test -Dtest-file=channels --summary all
